// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> Rendering should render the component 1`] = `
<div
  className="item"
>
  <ItemPoster
    filmIndex={5}
    posterClick={[MockFunction]}
    posterLink="https://image.tmdb.org/t/p/w500/pU1ULUq8D3iRxl1fdX2lZIzdHuI.jpg"
  />
  <ItemInfo
    filmTitle="Ready Player One"
    genre={
      Array [
        "Adventure",
        "Science Fiction",
        "Action",
      ]
    }
    releaseDate="2018-03-28"
  />
</div>
`;

exports[`<Item /> Rendering should render the component with default props 1`] = `
<div
  className="item"
>
  <ItemPoster
    filmIndex={5}
    posterClick={[Function]}
    posterLink="https://image.tmdb.org/t/p/w500/pU1ULUq8D3iRxl1fdX2lZIzdHuI.jpg"
  />
  <ItemInfo
    filmTitle="Ready Player One"
    genre={
      Array [
        "Adventure",
        "Science Fiction",
        "Action",
      ]
    }
    releaseDate="2018-03-28"
  />
</div>
`;
